<resources>
    <string name="app_label">아!그거</string>
    <string name="app_name">chipmunk</string>
    <string name="kakao_app_key">9e6558b0ff2328661fc462b40990bacb</string>

    <string name="range_picker_month_title">{YEAR}년 {MONTH}</string>
    <string name="range_picker_date_label">{YEAR}-{MONTH}-{DAY}</string>
    <string name="range_picker_invalid_range">처리하지 못하였습니다. 기간을 다시 설정해 주세요.</string>
    <string name="range_picker_start_date">시작일</string>
    <string name="range_picker_end_date">종료일</string>

    <string name="dashboard_checklist_summary_today">오늘 끝나는 체크리스트가\n%d개 있어요.</string>
    <string name="dashboard_checklist_summary_future">곧 끝나는 체크리스트가\n%d개 있어요.</string>
    <string name="dashboard_checklist_summary_else">확인해야 할 체크리스트</string>

    <string name="dashboard_checklist_summary_normal">아!그때 그거!</string>
    <string name="dashboard_checklist_summary_todo">곧 해야 하는 체크리스트가 \n%d개 있어요.</string>
    <string name="dashboard_checklist_summary_over_1w">1주일 경과된 체크리스트가 \n%d개 있어요.</string>
    <string name="dashboard_checklist_summary_over_2w">2주일 경과된 체크리스트가 \n%d개 있어요.</string>
    <string name="dashboard_checklist_summary_over_3w">3주일 경과된 체크리스트가 \n%d개 있어요.</string>
    <string name="dashboard_checklist_summary_over_4w">한달 경과된 체크리스트가 \n%d개 있어요.</string>

    <!-- 날짜관련-->
    <string name="date_week_abbr_1">일</string>
    <string name="date_week_abbr_2">월</string>
    <string name="date_week_abbr_3">화</string>
    <string name="date_week_abbr_4">수</string>
    <string name="date_week_abbr_5">목</string>
    <string name="date_week_abbr_6">금</string>
    <string name="date_week_abbr_7">토</string>

    <!-- 날짜 차이(Diff) 관련-->
    <string name="day_on_day">오늘</string>
    <string name="day_future">%d일전</string>
    <string name="day_past">%d일지남</string>

    <string name="dlg_confirm">확인</string>
    <string name="dlg_cancel">취소</string>

    <string name="top_title_user_query">검색 : %s</string>
    <string name="top_title_user_filter">필터링 : %s</string>
    <string name="top_title_user_normal">아!그거</string>

    <string name="failed_login">로그인을 할 수 없습니다. 잠시후 다시 시도해 주세요.</string>
    <string name="failed_get_user_info">사용자 정보를 가져올 수 없습니다. 잠시후 다시 로그인해주세요.</string>
    <string name="failed_get_location_query">장소 키워드가 없습니다.</string>
    <string name="failed_to_find_location">장소를 찾을 수 없습니다.</string>
    <string name="failed_to_load_categories">카테고리가 없습니다.\n카테고리를 추가해주세요.</string>
    <string name="failed_get_checklists">체크리스트를 가져오는데 실패하였습니다.</string>
    <string name="try_again">잠시 후 다시 시도해 주세요.</string>
    <string name="complete_copy">체크리스트가 복사되었습니다.</string>

    <string name="notification_on_setting">설정에서 알림을 켜주세요.</string>
    <string name="notification_title">종료알림</string>
    <string name="notification_in_week">곧 종료되는 체크리스트가 %d개 있습니다. 앱에서 확인해주세요.</string>
    <string name="notification_in_day">내일 끝나는 체크리스트가 %d개 있습니다. 앱에서 확인해주세요.</string>

    <string name="caution">주의</string>
    <string name="delete">삭제</string>
    <string name="retry">재시도</string>
    <string name="register_checklist">체크리스트 등록</string>
    <string name="setting">설정</string>
    <string name="checklist_sync">체크리스트 동기화</string>
    <string name="category_manage">카테고리 관리</string>
    <string name="app_info">앱정보</string>
    <string name="membership_logout">로그아웃</string>
    <string name="membership_withdrawal">회원탈퇴</string>
    <string name="unknown_membership">알수없는 사용자</string>
    <string name="location">장소</string>
    <string name="description">메모(최대 500자)</string>
    <string name="date_range">기간</string>
    <string name="end_date">종료일</string>
    <string name="exe_date">수행일</string>
    <string name="notification_setting">알림받기</string>
    <string name="checklist_name">체크리스트 이름</string>
    <string name="category">카테고리</string>
    <string name="my_checklist_count">내 체크리스트 : %d개</string>
    <string name="new_category">새로운 카테고리</string>
    <string name="add_category_success">추가하였습니다.</string>
    <string name="add_category_fail">추가하지 못하였습니다.</string>
    <string name="modify_category_success">수정되었습니다.</string>
    <string name="modify_category_fail">변경 실패</string>
    <string name="add_category_delete_with_checklist">체크리스트도 같이 삭제 됩니다. 삭제하시겠습니까?</string>
    <string name="add_category_delete">카테고리를 삭제하시겠습니까?</string>
    <string name="check_list_count_over_2">%s외 %d개</string>
    <string name="check_list_count_only_1">%s</string>
    <string name="empty_checklist">체크리스트가 없습니다.</string>
    <string name="no_category_add_first">카테고리를 먼저 추가해야합니다.</string>
    <string name="opensource">오픈라이센스</string>
    <string name="app_version">앱버전</string>
    <string name="delete_checklist">[%s] 체크리스트를 삭제하시겠습니까?</string>

    <string name="search">검색 (제목, 메모)</string>
    <string name="recent_search">최근 검색</string>
    <string name="clear_histories">모두 삭제</string>
    <string name="no_history">최근 검색 내역이 없습니다.</string>

    <string name="list_loading_failed">불러오지 못하였습니다.</string>
    <string name="list_loading_failed_retry">재시도</string>

    <string name="dlg_category_title_filter">필터</string>
    <string name="dlg_category_title_select">카테고리 선택</string>
    <string name="dlg_category_title_default">카테고리</string>

    <string name="dlg_checklist_detail_category">카테고리</string>
    <string name="dlg_checklist_detail_exe_date">수행일</string>
    <string name="dlg_checklist_detail_memo">메모</string>
    <string name="dlg_checklist_detail_delete">삭제</string>
    <string name="dlg_checklist_detail_modify">수정</string>
    <string name="dlg_checklist_detail_confirm">확인</string>

    <string name="dlg_checklist_delete_success">삭제되었습니다.</string>
    <string name="dlg_checklist_delete_fail">삭제하지 못하였습니다.</string>

    <string name="dlg_checklist_post_success">추가되었습니다.</string>
    <string name="dlg_checklist_post_fail">추가하지 못하였습니다.</string>
    <string name="dlg_checklist_post_update_success">수정되었습니다.</string>
    <string name="dlg_checklist_post_update_fail">수정하지 못하였습니다.</string>

    <string name="dlg_app_update_title">새로운 버전이 있습니다.</string>
    <string name="dlg_app_update_new_version">새로운 버전</string>
    <string name="dlg_app_update_description">업데이트 내용</string>
    <string name="dlg_app_update_do_update">업데이트</string>

    <string name="app_version_template">v%s</string>


</resources>