<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_h0_5">

        <!-- AppBar-->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/abl_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Toolbar -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_main"
                android:layout_width="match_parent"
                android:layout_height="@dimen/md_60"
                android:background="@color/material_amber_700">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_toolbar_back"
                        app:tint="@color/white"
                        android:background="?selectableItemBackgroundBorderless"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/toolbar_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/md_18"
                        android:ellipsize="end"
                        android:paddingEnd="@dimen/md_20"
                        android:maxLines="1"
                        android:gravity="center"
                        android:textSize="@dimen/md_18"
                        android:text="@string/app_info"
                        android:textColor="@color/white"
                        app:layout_constrainedWidth="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <!-- Box 0 : 리스트-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/md_18"
            android:layout_marginTop="@dimen/md_18"
            android:background="@drawable/bg_setting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/abl_setting" >

            <!-- Box 1 : 라이선스-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_license"
                android:layout_width="match_parent"
                android:layout_height="@dimen/md_56"
                android:foreground="?selectableItemBackgroundBorderless"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" >

                <!-- Box 1-1 : `라이선스`레이블-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/opensource"
                    android:theme="@style/SettingMenuLabel"
                    android:paddingHorizontal="@dimen/md_18"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/md_1"
                    android:background="@drawable/line_shadow"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Box 2 : 버전-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_app_info"
                android:layout_width="match_parent"
                android:layout_height="@dimen/md_56"
                android:foreground="?selectableItemBackgroundBorderless"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_license" >

                <!-- Box 3-4-1 : 버전정보 레이블 및 N표식-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_version_labels"
                    android:layout_width="@dimen/md_0"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/md_18"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" >

                    <!-- Box 3-4-1 : 버전정보 레이블-->
                    <TextView
                        android:id="@+id/tv_version_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_version"
                        style="@style/SettingMenuLabel"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <!-- Box 3-4-1 : 버전정보 업데이트 N표식-->
                    <ImageView
                        android:id="@+id/iv_new"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/md_4"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tv_version_label"
                        android:src="@drawable/ic_version_new" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <!-- Box 3-4-2 : 버전표시-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_version_contents"
                    android:layout_width="@dimen/md_0"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/md_18"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" >

                    <!-- Box 3-4-2 : 현재버전-->
                    <TextView
                        android:id="@+id/tv_current_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1.0.0"
                        style="@style/SettingMenuVersion"
                        app:layout_constraintEnd_toStartOf="@id/cl_version_updated_label"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <!-- Box 3-4-2 : 신규버전-->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_version_updated_label"
                        android:layout_width="@dimen/md_0"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" >

                        <!-- Box 3-4-2 : 버전구분자-->
                        <TextView
                            android:id="@+id/tv_version_splitter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" / "
                            style="@style/SettingMenuVersion"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/tv_new_version"/>

                        <!-- Box 3-4-2 : 신규버전-->
                        <TextView
                            android:id="@+id/tv_new_version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1.0.1"
                            style="@style/SettingMenuVersionNew"
                            app:layout_constraintStart_toEndOf="@id/tv_version_splitter"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>